@@ -69,11 +69,11 @@ done
 # Specify the default versions to use as a string <tool>:<branch>. These are
 # the development versions for the ARC 4.4 tool chain release. Only actually
 # matters if --auto-checkout is set.
-cgen="cgen:arc_4_8-cgen-1_0-stable"
-binutils="binutils:arc_4_8-binutils-2_23_2-stable"
-gcc="gcc:arc_4_8-gcc-4_8-stable"
-gdb="gdb:arc_4_8-gdb-7_5_1-stable"
-newlib="newlib:arc_4_8-newlib-2_0-stable"
+cgen="cgen:arc-1.0-stable"
+binutils="binutils:arc-2.23-stable"
+gcc="gcc:arc-4.8-stable"
+gdb="gdb:arc-7.5-stable"
+newlib="newlib:arc-2.0-stable"
 uclibc="uClibc:arc_4_8-uclibc-stable"
 linux="linux:arc-3.9"
 
